[gd_scene load_steps=17 format=2]

[ext_resource path="res://MinigameBoilerplate.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://MainPlayer.gd" type="Script" id=3]
[ext_resource path="res://LiftableObject.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Objects/Box.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Dialogue.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/battlenet/new_dynamicfont.tres" type="DynamicFont" id=7]

[sub_resource type="Gradient" id=6]

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 480, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 270 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 270 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 480, 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.317647 )

[node name="MinigameBoilerplate" type="Node2D"]
script = ExtResource( 1 )

[node name="LiftableObject" type="Area2D" parent="."]
position = Vector2( 258, 360 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="LiftableObjectPic" type="Sprite" parent="LiftableObject"]
texture = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="LiftableObject/LiftableObjectPic"]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LiftableObject"]
shape = SubResource( 8 )

[node name="MainPlayer" type="KinematicBody2D" parent="."]
position = Vector2( 473, 290 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainPlayer"]
shape = SubResource( 1 )

[node name="CharacterPic" type="Sprite" parent="MainPlayer"]
texture = ExtResource( 2 )

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2( 480, -5 )
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
unique_name_in_owner = true
position = Vector2( -5, 270 )
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="Walls"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2( 965, 270 )
shape = SubResource( 4 )

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2( 480, 545 )
shape = SubResource( 5 )

[node name="Control" type="Control" parent="."]

[node name="Dialogue" type="MarginContainer" parent="Control"]
margin_left = 5.0
margin_top = 5.0
margin_right = 285.0
margin_bottom = 110.0
input_pass_on_modal_close_click = false
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Control/Dialogue"]
margin_right = 290.0
margin_bottom = 105.0
custom_styles/panel = SubResource( 9 )

[node name="Label" type="Label" parent="Control/Dialogue"]
margin_left = 5.0
margin_top = 5.0
margin_right = 285.0
margin_bottom = 110.0
rect_min_size = Vector2( 280, 105 )
custom_fonts/font = ExtResource( 7 )
text = "To Move around press w (Forward), S (Backward), A (left), D (Right). An object is below to pick it up, go to the inner square of the object and press Enter (Microsoft/google Devices) or Return (Mac Devices). "
autowrap = true
clip_text = true

[node name="Label2" type="Label" parent="Control/Dialogue"]
visible = false
margin_right = 280.0
margin_bottom = 100.0
rect_min_size = Vector2( 280, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Testing the peramitiers of the loading text and unloading text to create a semless transition 1"
autowrap = true
clip_text = true

[node name="Label3" type="Label" parent="Control/Dialogue"]
visible = false
margin_top = 2.0
margin_right = 280.0
margin_bottom = 102.0
rect_min_size = Vector2( 280, 100 )
custom_fonts/font = ExtResource( 7 )
text = "Testing the peramitiers of the loading text and unloading text to create a semless transition 2"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="Label4" type="Label" parent="Control/Dialogue"]
visible = false
margin_top = 2.0
margin_right = 280.0
margin_bottom = 102.0
rect_min_size = Vector2( 280, 100 )
custom_fonts/font = ExtResource( 7 )
text = "Testing the peramitiers of the loading text and unloading text to create a semless transition 3"
autowrap = true
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[connection signal="body_entered" from="LiftableObject" to="LiftableObject" method="_on_LiftableObject_body_entered"]
